name:                stream-trans
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mcmayer/stream-trans
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Data, Data Structures
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      Data/Vector/Fusion/Stream/Monadic
  exposed-modules:     Trans
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/stream-trans
