name:                stream-trans
version:             0.1.0.0
synopsis:            Monadic stream transformers for Data.Vector.Fusion.Stream.Monadic
description:         Todo
homepage:            https://github.com/mcmayer/stream-trans
license:             MIT
license-file:        LICENSE
author:              Markus Mayer
maintainer:          mmayer@mayeranalytics.com
copyright:           2018 Markus Mayer
category:            Data, Data Structures
build-type:          Simple
extra-source-files:  README.md
                     changelog
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  exposed-modules:     Data.Vector.Fusion.Stream.Monadic.Trans
                       Data.Vector.Fusion.Stream.Monadic.Utils
                       Data.Vector.Fusion.Stream.Monadic.Bitstream
                       Data.Vector.Fusion.Stream.Stream
  build-depends:       base >= 4.7 && < 5
                     , ghc >= 8.4
                     , vector >= 0.2
                     , mtl
                     , bytestring
                     , word8
  default-language:    Haskell2010
  Ghc-Options:         -O2 -fforce-recomp -optc "-funroll-loops" -fllvm -threaded -funbox-strict-fields -ddump-asm -ddump-simpl

source-repository head
  type:     git
  location: https://github.com/mcmayer/stream-trans

Test-Suite test-stream-trans
    type:             exitcode-stdio-1.0
    main-is:          TestStreamTrans.hs
    build-depends:    base
                    , vector
                    , bytestring
                    , random
                    , QuickCheck
                    , mtl
    default-language: Haskell2010
    other-modules:    Data.Vector.Fusion.Stream.Monadic.Trans
                    , Data.Vector.Fusion.Stream.Monadic.Utils
                    , Data.Vector.Fusion.Stream.Stream

Test-Suite test-stream-utils
    type:             exitcode-stdio-1.0
    main-is:          TestStreamUtils.hs
    build-depends:    base
                    , vector
                    , bytestring
                    , random
                    , QuickCheck
                    , mtl
    default-language: Haskell2010
    other-modules:    Data.Vector.Fusion.Stream.Monadic.Trans
                    , Data.Vector.Fusion.Stream.Monadic.Utils
                    , Data.Vector.Fusion.Stream.Stream

Test-Suite test-stream-bitstream
    type:             exitcode-stdio-1.0
    main-is:          TestBitstream.hs
    build-depends:    base
                    , vector
                    , bytestring
                    , random
                    , QuickCheck
                    , mtl
                    , word8
    default-language: Haskell2010
    other-modules:    Data.Vector.Fusion.Stream.Monadic.Trans
                    , Data.Vector.Fusion.Stream.Monadic.Utils
                    , Data.Vector.Fusion.Stream.Monadic.Bitstream
                    , Data.Vector.Fusion.Stream.Stream

executable random-bits
    main-is:          RandomBits.hs
    build-depends:    base
                    , vector
                    , bytestring
                    , random
                    , mtl
                    , word8
    default-language: Haskell2010
    other-modules:    Data.Vector.Fusion.Stream.Monadic.Trans
                    , Data.Vector.Fusion.Stream.Monadic.Utils
                    , Data.Vector.Fusion.Stream.Monadic.Bitstream
                    , Data.Vector.Fusion.Stream.Stream
    ghc-prof-options: -fprof-auto
    Ghc-Options:    -O2 -fforce-recomp -optc "-funroll-loops" -fllvm -threaded -funbox-strict-fields -ddump-asm -ddump-simpl
